--- a/Backend Project/Views/_ViewImports.cshtml
+++ b/Backend Project/Views/_ViewImports.cshtml
@@ -5,5 +5,6 @@
 @using Backend_Project.Services.Interfaces
 @using Backend_Project.Helpers
 @using Backend_Project.ViewModels.Account
+@using Microsoft.AspNetCore.Identity
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
